--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="logo-img" src="/img/nightlight.png" />
       </div>
       <div class="description">
-        An inside look at what Night is reading, watching, and talking about
+        An inside look at what Night is reading, watching and talking about
       </div>
       <div class="signup">
         <iframe
