attempt fix with image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="hero">
         <div class="hero-img"></div>
-        <img class="logo-img" src="/img/nightlight.png" />
+        <img class="logo-img" src="img/nightlight.png" />
       </div>
       <div class="description">
         An inside look at what Night is reading, watching and talking about
